renamed all the workspaces

--- a/i1_big_o/Cargo.toml
+++ b/i1_big_o/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "problem_solving_patterns"
+name = "i1_big_o"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex = "1.5.5"
+num-traits = "0.2"
